--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,6 +2,19 @@ body {
   font-family: verdana;
 }
 
+input, button {
+  height: 2rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+form > * {
+  margin: 1rem;
+}
+
 nav {
   display: flex;
   justify-content: space-around;
